mosquitto: Tune interval in service monitor

--- a/apps/mosquitto/values.yaml
+++ b/apps/mosquitto/values.yaml
@@ -110,5 +110,5 @@ app-template:
         - port: metrics
           scheme: http
           path: /metrics
-          interval: 1m
-          scrapeTimeout: 30s
+          interval: 30s
+          scrapeTimeout: 10s
