bazarr: Adjust memory limit to 1Gi

--- a/apps/bazarr/values.yaml
+++ b/apps/bazarr/values.yaml
@@ -19,7 +19,7 @@ app-template:
               memory: 250Mi
             limits:
               cpu: 1
-              memory: 500Mi
+              memory: 1Gi
 
         subcleaner:
           image:
