--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -46,6 +46,15 @@ ingress-nginx:
                   operator: In
                   values:
                     - amd64
+          - weight: 25
+            preference:
+              matchExpressions:
+                - key: kubernetes.io/hostname
+                  operator: In
+                  values:
+                    - k8s-odroid-c4-1
+                    - k8s-odroid-c4-2
+                    - k8s-odroid-hc4-3
 
     autoscaling:
       enabled: true
