--- a/apps/mintpsicologia/values.yaml
+++ b/apps/mintpsicologia/values.yaml
@@ -60,6 +60,10 @@ wordpress:
       force_set_passwords.sh: |
         #!/bin/sh
 
-        echo "ALTER USER 'root'@'%' IDENTIFIED BY '$MARIADB_ROOT_PASSWORD'; ALTER USER '$MARIADB_USER'@'%' IDENTIFIED BY '$MARIADB_PASSWORD'; " > /tmp/force_set_passwords.sql
+        echo "\
+        ALTER USER 'root'@'%' IDENTIFIED VIA mysql_native_password USING PASSWORD('$MARIADB_ROOT_PASSWORD'); \
+        ALTER USER '$MARIADB_USER'@'%' IDENTIFIED VIA mysql_native_password USING PASSWORD ('$MARIADB_PASSWORD'); \
+        FLUSH PRIVILEGES; \
+        " > /tmp/force_set_passwords.sql
   memcached:
     enabled: true
