--- a/apps/mintpsicologia/values.yaml
+++ b/apps/mintpsicologia/values.yaml
@@ -44,26 +44,15 @@ wordpress:
     enabled: true
     architecture: standalone
     auth:
-      rootPassword: ""
+      existingSecret: wordpress-mariadb-secret
       database: bitnami_wordpress
       username: bn_wordpress
-      password: ""
     primary:
-      extraFlags: "--init-file=/tmp/force_set_passwords.sql"
       persistence:
         enabled: true
         storageClass: zfs-local-dataset
         accessModes:
           - ReadWriteOnce
         size: 1Gi
-    initdbScripts:
-      force_set_passwords.sh: |
-        #!/bin/sh
-
-        echo "\
-        ALTER USER 'root'@'%' IDENTIFIED VIA mysql_native_password USING PASSWORD('$MARIADB_ROOT_PASSWORD'); \
-        ALTER USER '$MARIADB_USER'@'%' IDENTIFIED VIA mysql_native_password USING PASSWORD ('$MARIADB_PASSWORD'); \
-        FLUSH PRIVILEGES; \
-        " > /tmp/force_set_passwords.sql
   memcached:
     enabled: true
