--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -9,7 +9,7 @@ app-template:
         main:
           image:
             repository: kanidm/server
-            tag: 1.1.0-beta.13
+            tag: 1.1.0-rc.16
 
           resources:
             requests:
