--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -16,7 +16,7 @@ app-template:
               cpu: 10m
               memory: 90Mi
             limits:
-              memory: 512Mi
+              memory: 2Gi
 
           probes:
             liveness: &probes
