--- a/apps/github-exporter/values.yaml
+++ b/apps/github-exporter/values.yaml
@@ -16,7 +16,7 @@ app-template:
             readiness: *probe
           env:
             #REPOS: rash-sh/rash, pando85/timer, kanidm/kanidm, pando85/homelab, pando85/gearr
-            REPOS: rash-sh/rash
+            REPOS: rash-sh/rash, pando85/timer
           envFrom:
             - secretRef:
                 name: github-exporter
