--- a/system/zfs-localpv/templates/storage-class-openebs-zfspv.yaml
+++ b/system/zfs-localpv/templates/storage-class-openebs-zfspv.yaml
@@ -3,7 +3,7 @@ kind: StorageClass
 metadata:
   name: openebs-zfspv
   annotations:
-    storageclass.kubernetes.io/is-default-class: true
+    storageclass.kubernetes.io/is-default-class: "true"
 allowVolumeExpansion: true
 parameters:
   fstype: "zfs"
