--- a/system/zfs-local-dataset/values.yaml
+++ b/system/zfs-local-dataset/values.yaml
@@ -62,7 +62,7 @@ democratic-csi:
 
   storageClasses:
     - name: zfs-local-dataset
-      defaultClass: true
+      defaultClass: false
       reclaimPolicy: Delete
       volumeBindingMode: Immediate
       allowVolumeExpansion: false
