--- a/apps/wallabag/templates/postgresql.yaml
+++ b/apps/wallabag/templates/postgresql.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   teamId: wallabag
 
-  numberOfInstances: 0
+  numberOfInstances: 1
 
   resources:
     requests:
@@ -21,20 +21,20 @@ spec:
 
   users:
     wallabag:
-      - superuser
-      - createdb
+    - superuser
+    - createdb
   databases:
     wallabag: wallabag
 
   postgresql:
     version: "15"
     parameters:
-      archive_mode: "off"
+      archive_mode: 'off'
       max_connections: "4"
       shared_buffers: 32MB
-      log_checkpoints: "off"
-      log_connections: "off"
-      log_disconnections: "off"
-      log_lock_waits: "off"
+      log_checkpoints: 'off'
+      log_connections: 'off'
+      log_disconnections: 'off'
+      log_lock_waits: 'off'
       log_min_duration_statement: "-1"
       log_statement: none
