--- a/apps/freshrss/templates/postgresql.yaml
+++ b/apps/freshrss/templates/postgresql.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   teamId: freshrss
 
-  numberOfInstances: 1
+  numberOfInstances: 0
 
   resources:
     requests:
@@ -17,24 +17,23 @@ spec:
 
   volume:
     size: 1.5Gi
-    storageClass: zfs-local-dataset
 
   users:
     freshrss:
-    - superuser
-    - createdb
+      - superuser
+      - createdb
   databases:
     freshrss: freshrss
 
   postgresql:
     version: "15"
     parameters:
-      archive_mode: 'off'
+      archive_mode: "off"
       max_connections: "4"
       shared_buffers: 32MB
-      log_checkpoints: 'off'
-      log_connections: 'off'
-      log_disconnections: 'off'
-      log_lock_waits: 'off'
+      log_checkpoints: "off"
+      log_connections: "off"
+      log_disconnections: "off"
+      log_lock_waits: "off"
       log_min_duration_statement: "-1"
       log_statement: none
