--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -266,7 +266,7 @@ app-template:
   persistence:
     config:
       enabled: true
-      existingClaim: home-assistant-config-zfs
+      existingClaim: home-assistant-config
       advancedMounts:
         main:
           main:
