radarr: Change to zfs-localpv

--- a/apps/radarr/templates/pvc.yaml
+++ b/apps/radarr/templates/pvc.yaml
@@ -7,11 +7,10 @@ metadata:
     backup: radarr-zfs
   annotations:
     argocd.argoproj.io/sync-options: Prune=false
-  name: config-radarr-zfs
+  name: config-radarr
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 5Gi
-  storageClassName: zfs-local-dataset
