jellyseerr: Change volume to zfs-localpv

--- a/apps/jellyseerr/values.yaml
+++ b/apps/jellyseerr/values.yaml
@@ -62,4 +62,4 @@ app-template:
       enabled: true
       globalMounts:
         - path: /app/config
-      existingClaim: jellyseerr-config-zfs
+      existingClaim: jellyseerr-config
