--- a/apps/jellyseerr/templates/pvc.yaml
+++ b/apps/jellyseerr/templates/pvc.yaml
@@ -7,11 +7,10 @@ metadata:
     snapshots: jellyseerr-zfs
   annotations:
     argocd.argoproj.io/sync-options: Prune=false
-  name: jellyseerr-config-zfs
+  name: jellyseerr-config
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
-  storageClassName: zfs-local-dataset
