--- a/apps/nextcloud/templates/postgresql.yaml
+++ b/apps/nextcloud/templates/postgresql.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   teamId: nextcloud
 
-  numberOfInstances: 1
+  numberOfInstances: 0
 
   resources:
     requests:
@@ -20,20 +20,20 @@ spec:
 
   users:
     nextcloud:
-    - superuser
-    - createdb
+      - superuser
+      - createdb
   databases:
     nextcloud: nextcloud
 
   postgresql:
     version: "15"
     parameters:
-      archive_mode: 'off'
+      archive_mode: "off"
       max_connections: "4"
       shared_buffers: 32MB
-      log_checkpoints: 'off'
-      log_connections: 'off'
-      log_disconnections: 'off'
-      log_lock_waits: 'off'
+      log_checkpoints: "off"
+      log_connections: "off"
+      log_disconnections: "off"
+      log_lock_waits: "off"
       log_min_duration_statement: "-1"
       log_statement: none
