--- a/system/zfs-localpv/templates/storage-class-openebs-zfspv.yaml
+++ b/system/zfs-localpv/templates/storage-class-openebs-zfspv.yaml
@@ -8,7 +8,7 @@ allowVolumeExpansion: true
 parameters:
   fstype: "zfs"
   shared: "yes"
-  poolname: "dataset/openebs"
+  poolname: "datasets/openebs"
 provisioner: zfs.csi.openebs.io
 allowedTopologies:
   - matchLabelExpressions:
