mintpsicologia: Debug wordpress

--- a/apps/mintpsicologia/values.yaml
+++ b/apps/mintpsicologia/values.yaml
@@ -1,4 +1,6 @@
 wordpress:
+  image:
+    debug: true
   wordpressUsername: ateneatla
   existingSecret: "wordpress-secret"
   wordpressBlogName: Mintpsicologia
