--- a/apps/mintpsicologia/values.yaml
+++ b/apps/mintpsicologia/values.yaml
@@ -1,6 +1,6 @@
 wordpress:
   image:
-    debug: true
+    debug: false
   wordpressUsername: ateneatla
   existingSecret: "wordpress-secret"
   wordpressBlogName: Mintpsicologia
