--- a/apps/prowlarr/templates/snapshots.yaml
+++ b/apps/prowlarr/templates/snapshots.yaml
@@ -1,7 +1,7 @@
 apiVersion: snapscheduler.backube/v1
 kind: SnapshotSchedule
 metadata:
-  name: prowlarr-zfs-backups
+  name: prowlarr-backups
 spec:
   retention:
     maxCount: 20
@@ -9,5 +9,3 @@ spec:
   claimSelector:
     matchLabels:
       backup: prowlarr-zfs
-  snapshotTemplate:
-    snapshotClassName: zfs-local-dataset
