loki: Change to OnRootMismatch the fs group change policy
This will reduce startup times

--- a/system/loki/values.yaml
+++ b/system/loki/values.yaml
@@ -1,5 +1,12 @@
 loki:
   loki:
+    podSecurityContext:
+      fsGroup: 10001
+      runAsGroup: 10001
+      runAsNonRoot: true
+      runAsUser: 10001
+      fsGroupChangePolicy: "OnRootMismatch"
+
     commonConfig:
       replication_factor: 1
     storage:
