sonarr: Move pvc to zfs-localpv

--- a/apps/sonarr/templates/pvc.yaml
+++ b/apps/sonarr/templates/pvc.yaml
@@ -7,11 +7,10 @@ metadata:
     backup: sonarr-zfs
   annotations:
     argocd.argoproj.io/sync-options: Prune=false
-  name: config-sonarr-zfs
+  name: config-sonarr
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
-  storageClassName: zfs-local-dataset
