velero: Initial commit

--- a/platform/minio/templates/external-secrets-users.yaml
+++ b/platform/minio/templates/external-secrets-users.yaml
@@ -18,3 +18,7 @@ spec:
       remoteRef:
         key: /minio/users
         property: rootPassword
+    - secretKey: veleroPassword
+      remoteRef:
+        key: /minio/users
+        property: veleroPassword
