--- a/platform/velero/values.yaml
+++ b/platform/velero/values.yaml
@@ -14,6 +14,9 @@ velero:
         - name: plugins
           mountPath: "/target"
 
+  nodeSelector:
+    kubernetes.io/arch: amd64
+
   configuration:
     backupStorageLocation:
       - name: local-s3
