velero: Add weekly backups

--- a/system/monitoring/resources/long-term-metrics/prometheus.yaml
+++ b/system/monitoring/resources/long-term-metrics/prometheus.yaml
@@ -66,6 +66,9 @@ spec:
   retentionSize: 200GB
   storage:
     volumeClaimTemplate:
+      metadata:
+        labels:
+          app: velero
       spec:
         accessModes:
           - ReadWriteOnce
