velero: Change schedule label selector to or label selector

--- a/platform/velero/templates/schedule-weekly.yaml
+++ b/platform/velero/templates/schedule-weekly.yaml
@@ -27,8 +27,8 @@ spec:
       - system-upgrade
       - zfs-exporter
       - zfs-localpv
-    labelSelector:
-      matchLabels:
+    orLabelSelector:
+      - matchLabels:
         app: velero
     includeClusterResources: false
     snapshotVolumes: true
