velero: Change schedule label selector to or label selector

--- a/platform/velero/templates/schedule-weekly.yaml
+++ b/platform/velero/templates/schedule-weekly.yaml
@@ -27,7 +27,7 @@ spec:
       - system-upgrade
       - zfs-exporter
       - zfs-localpv
-    orLabelSelector:
+    orLabelSelectors:
       - matchLabels:
         app: velero
     includeClusterResources: false
