velero: Add schedule for labeled resources

--- a/system/monitoring/resources/long-term-metrics/prometheus.yaml
+++ b/system/monitoring/resources/long-term-metrics/prometheus.yaml
@@ -68,7 +68,7 @@ spec:
     volumeClaimTemplate:
       metadata:
         labels:
-          app: velero
+          backup: velero
       spec:
         accessModes:
           - ReadWriteOnce
