--- a/platform/velero/values.yaml
+++ b/platform/velero/values.yaml
@@ -34,7 +34,7 @@ velero:
         config:
           region: minio
           s3ForcePathStyle: true
-          s3Url: http://minio.minio.svc:9000/
+          s3Url: https://s3.internal.grigri.cloud/
     # Is configured but not currenlty in use in velero schedules.
     # Probably will use it in the future if they add a feature to upload snapshots to S3
     # or if we decide to mirror them between different Cephs. SnapshotClass are already annotated.
@@ -53,7 +53,7 @@ velero:
           provider: aws
           region: minio
           s3ForcePathStyle: "true"
-          s3Url: http://minio.minio.svc:9000/
+          s3Url: https://s3.internal.grigri.cloud/
 
   credentials:
     existingSecret: velero-bucket-credentials
