velero: Use restic by default

--- a/platform/velero/values.yaml
+++ b/platform/velero/values.yaml
@@ -55,6 +55,8 @@ velero:
           s3ForcePathStyle: "true"
           s3Url: https://s3.internal.grigri.cloud/
 
+    uploaderType: restic
+
   credentials:
     existingSecret: velero-bucket-credentials
 
