velero: Add `useOwnerReferencesInBackup`
Avoid backup prune by ArgoCD.
Ref: https://github.com/vmware-tanzu/velero/issues/2975

--- a/platform/velero/templates/schdule-weekly-labeled.yaml
+++ b/platform/velero/templates/schdule-weekly-labeled.yaml
@@ -16,4 +16,4 @@ spec:
     ttl: 2160h0m0s # 90d
     volumeSnapshotLocations:
       - zfspv-incr
-  useOwnerReferencesInBackup: false
+  useOwnerReferencesInBackup: true
