minio: Fix OIDC url

--- a/platform/minio/values.yaml
+++ b/platform/minio/values.yaml
@@ -112,7 +112,7 @@ minio:
   ## See https://min.io/docs/minio/linux/operations/external-iam/configure-openid-external-identity-management.html for a tutorial on using these variables.
   oidc:
     enabled: true
-    configUrl: "https://idm.grigri.cloud/oauth2/openid//.well-known/openid-configuration"
+    configUrl: "https://idm.grigri.cloud/oauth2/openid/.well-known/openid-configuration"
     existingClientSecretName: minio-oidc
     existingClientIdKey: clientId
     existingClientSecretKey: clientSecret
