--- a/platform/minio/values.yaml
+++ b/platform/minio/values.yaml
@@ -112,11 +112,11 @@ minio:
   ## See https://min.io/docs/minio/linux/operations/external-iam/configure-openid-external-identity-management.html for a tutorial on using these variables.
   oidc:
     enabled: true
-    configUrl: "https://idm.grigri.cloud/oauth2/openid/minio/.well-known/openid-configuration"
+    configUrl: https://idm.grigri.cloud/oauth2/openid/minio/.well-known/openid-configuration
     existingClientSecretName: minio-oidc
     existingClientIdKey: clientId
     existingClientSecretKey: clientSecret
-    scopes: "openid,profile,email"
+    scopes: openid,profile,email
     redirectUri: https://mc-s3.internal.grigri.cloud/oauth_callback
     displayName: idm.grigri.cloud
 
