velero: Exclude monitoring from backups

--- a/platform/velero/templates/schedule-weekly.yaml
+++ b/platform/velero/templates/schedule-weekly.yaml
@@ -21,6 +21,7 @@ spec:
       - loki
       - metallb-system
       - minio
+      - monitoring
       - postgres-operator
       - reloader
       - snapscheduler
