velero: Enable debug and increase timeouts

--- a/platform/velero/values.yaml
+++ b/platform/velero/values.yaml
@@ -68,6 +68,9 @@ velero:
 
     uploaderType: restic
     fsBackupTimeout: 32h
+    defaultItemOperationTimeout: 32h
+    garbageCollectionFrequency: 24h
+    logLevel: debug
 
   credentials:
     existingSecret: velero-bucket-credentials
