esphome: Higrow fix DHT model to DHT11

--- a/apps/esphome/config/lilygo-higrow-1.yaml
+++ b/apps/esphome/config/lilygo-higrow-1.yaml
@@ -104,7 +104,7 @@ sensor:
   # DHT
   - platform: dht
     pin: 16
-    #model: dht11
+    model: dht11
     temperature:
       name: "${friendly_name} DHT Temperature"
       unit_of_measurement: "°C"
