esphome: Refactor smart-plug
Not working, use precious esphome version

--- a/apps/esphome/config/packages/connection.yaml
+++ b/apps/esphome/config/packages/connection.yaml
@@ -16,7 +16,7 @@ wifi:
   domain: !secret domain_devices
 
   ap:
-    ssid: "${friendly_name} Fallback Hotspot"
+    ssid: "${friendly_name}"
     password: !secret wifi_fallback_ap_password
 
 captive_portal:
